Project Preview Images Spacing Fixed

--- a/src/pages/ProjectPage/ProjectPage.css
+++ b/src/pages/ProjectPage/ProjectPage.css
@@ -13,6 +13,7 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   place-items: center;
+  margin: 0 10rem;
 }
 
 .projects > img {
